<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.agendageo.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/events_fragment" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.agendageo.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/map_fragment" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.agendageo.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/add_fragment" />
</navigation>